Refactor GroupTreeViewModel to use toList() for collecting suggested subgroups